changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Correctly point to tiled group instead of non existing map page.
 utils/mapper.c
Nicolas Weeger, 2008-03-24

Use region's name instead of the filename in maps's pages.
 utils/mapper.c
Nicolas Weeger, 2008-03-24

Remove trailing newlines in quest/map description.
 utils/mapper.c
Nicolas Weeger, 2008-03-24

Tweak documentation so some programs in utils/ are part of Doxygen's output.
 Doxyfile
 utils/bwp.c gridarta-types-convert.c mapper.c
Nicolas Weeger, 2008-03-23

Tweak documentation, remove unused parameters.
plugins/citylife/citylife.c
Nicolas Weeger, 2008-03-23

Fix memory leak.
 utils/mapper.c
Nicolas Weeger, 2008-03-23

Fix documentation, no functional change.
 common/button.c image.c info.c init.c item.c player.c time.c treasure.c
 plugins/cfpython/cfpython_map.c
 random_maps/exit.c random_map.h treasure.c
 server/apply.c plugins.c rune.c spell_effect.c
 types/button/button.c
 types/exit/exit.c
 types/legacy/apply.c
 types/spell_effect/spell_effect.c
 types/trap/rune.c
 types/treasure/treasure.c
Nicolas Weeger, 2008-03-23

Fix protocol issues regarding sent items: do not send invisible items.
  common/object.c
Andreas Kirschbaum 2008-03-21

Fix protocol issues regarding face caching.
  socket/request.c
Andreas Kirschbaum 2008-03-21

Implement strerror_local() for systems not having strerror_r().
  common/porting.c
Andreas Kirschbaum 2008-03-20

Fix some integer overflows in experience calculations.
  common/exp.c
  common/living.c
  include/libproto.h
  include/sproto.h
  server/attack.c
  server/skill_util.c
Andreas Kirschbaum, 2008-03-08
