@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Factorize code.
+ common/friend.c
+Nicolas Weeger, 2008-03-24
+
 Correctly point to tiled group instead of non existing map page.
  utils/mapper.c
 Nicolas Weeger, 2008-03-24
